// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it should layout grid layers 1`] = `
<g
  data-area="title"
  data-layer="area-title"
  transform="translate(0, 0)"
/>
`;

exports[`it should layout grid layers 2`] = `
<g
  data-area="y_axis"
  data-layer="area-y_axis"
  transform="translate(0, 25)"
/>
`;

exports[`it should layout grid layers 3`] = `
<g
  data-area="x_axis"
  data-layer="area-x_axis"
  transform="translate(25, 75)"
/>
`;

exports[`it should layout grid layers 4`] = `
<g
  data-area="chart"
  data-layer="lines"
  transform="translate(25, 25)"
/>
`;

exports[`it should layout grid layers 5`] = `
<g
  data-area="chart"
  data-layer="bars"
  transform="translate(25, 25)"
/>
`;

exports[`it should layout grid layers 6`] = `
<g>
  <g
    data-area="title"
    data-layer="area-title"
    transform="translate(0, 0)"
  />
  <g
    data-area="y_axis"
    data-layer="area-y_axis"
    transform="translate(0, 25)"
  />
  <g
    data-area="x_axis"
    data-layer="area-x_axis"
    transform="translate(25, 75)"
  />
  <g
    data-area="chart"
    data-layer="lines"
    transform="translate(25, 25)"
  />
  <g
    data-area="chart"
    data-layer="bars"
    transform="translate(25, 25)"
  />
</g>
`;
